Changelog:
4.0.0 to
- Data file updates
  - Action 0 objects properties 11..16.
  - Action 2 objects variablse 42, 44..46, 5F, 60..64.
  - Action 2 callbacks 157..15D.
- Add command line option to silence all progress output.
- Add support for reading the (Action 14) version of other NewGRFs via Action D
  parameter 7E.
- Fix Cygwin compilation issues.
- Fix putting version.def twice in the source bundle.
- Fix returning a non-zero exit code upon an unrecognised command line option.
- Fix UPX-ing of release binaries under some circumstances.

v3.4.6 to 4.0.0
- Change rename "renum" to "nforenum" including ".renum" to ."nforenum"
  so the name is less generic and the same as in several downstreams.
  You might need to update your development environment / build scripts.
- (devel) Complete rewrite of installation of binaries, so if you are
  packaging this you will have to check whether custom installation and
  such are still needed or that the Makefile does handle it correctly.
- Data file updates:
  - Enable actions 1..3 for airports, newobjects, railtypes and airport tiles.
  - Action 0 train prop 1A (change to extended byte).
  - Action 0 road vehicle prop 20,
  - Action 0 ship prop 1B.
  - Action 0 plane prop 1B.
  - Action 0 general variable properties 08, 11, 12.
  - Action 0 house props 21..22.
  - Action 0 bridge props 00, 10..13.
  - Action 0 airport properties 08..0A, 0C..10.
  - Action 0 object properties 0B..10.
  - Action 0 railtype properties 08..16.
  - Action 0 airport tile properties 08, 09, 0E..11.
  - Action 2 operators 14, 15, 16
  - Action 2 variables 12, 1D, 23, 24, 25.
  - Action 2 vehicle variable 49, 4A.
  - Action 2 stations: fix parameter limits on station var 60.
  - Action 2 house variable 47, 65, 66, 67.
  - Action 2 industry variable 46.
  - Action 2 objects variable 40..43.
  - Action 2 railtype variable 40..43, 80.
  - Action 2 airport tile variable 40..44, 60..62.